err/pyarch.err
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/hiatus'...
Listing './lib/python3.5/site-packages/hiatus-0.0.1.egg-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/pyarch'...
Listing './lib/python3.5/site-packages/pyarch/combinational'...
Listing './lib/python3.5/site-packages/pyarch/connectors'...
Listing './lib/python3.5/site-packages/pyarch/sequential'...
Listing './lib/python3.5/site-packages/pyarch/utils'...
Listing './lib/python3.5/site-packages/pyarch-0.0.5.egg-info'...
Listing './lib/python3.5/site-packages/pyee'...
Listing './lib/python3.5/site-packages/pyee-5.0.0.dist-info'...
Listing './lib/python3.5/site-packages/samples'...
Compiling './lib/python3.5/site-packages/samples/plug-in-2x4Decoder.py'...
***   File "./lib/python3.5/site-packages/samples/plug-in-2x4Decoder.py", line 11
    print iohandler.input('0','1')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samples/plug-in-GrayCode.py'...
***   File "./lib/python3.5/site-packages/samples/plug-in-GrayCode.py", line 32
    print iohandler.input('1001')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samples/plug-in-PipoAdder.py'...
***   File "./lib/python3.5/site-packages/samples/plug-in-PipoAdder.py", line 11
    print iohandler.input('1111','1111')
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samples/plug-in-SRff.py'...
***   File "./lib/python3.5/site-packages/samples/plug-in-SRff.py", line 12
    print iohandler.input('0','1','1')  # S-bit R-bit Clock
                  ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/samples/plug-in-fulladder.py'...
***   File "./lib/python3.5/site-packages/samples/plug-in-fulladder.py", line 10
    print iohandler.input('011')  # 'carry bit + 2 sum bits'
                  ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './share'...
Listing './share/python-wheels'...
